--- a/src/client/App.css
+++ b/src/client/App.css
@@ -29,15 +29,32 @@
 }
 
 .tile {
-  display: inline-block;
-  /* border: solid;
-  border-width: 1px; */
-  width: 30px;
-  height: 30px;
+  display: flex;
+  background-color: #282c34;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+  border-width: 2px;
+  border-style: solid;
+  border-top-color: lightgray;
+  border-left-color: lightgray;
+  border-bottom-color: black;
+  border-right-color: black;
+  font-size: medium;
+}
+
+.tile--unopened {
+  width: 100%;
+  height: 100%;
 }
 
 .tile:hover {
   cursor: pointer;
+}
+
+.tile--opened {
+  /* border-color: gray; */
+  border: none;
 }
 
 .tile--unopened:hover {
@@ -45,13 +62,12 @@
 }
 
 .map {
-  margin: 20px;
-}
-
-.map--row {
-  display: block;
-  margin: 0;
-  line-height: 0;
+  display: grid;
+  background-color: gray;
+  border: 1px solid gray;
+  grid-template-columns: repeat(10, 40px);
+  grid-auto-rows: minmax(40px, auto);
+  grid-gap: 1px;
 }
 
 .new-game-btn {
