added box shadow to opened tiles

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -42,8 +42,9 @@
 }
 
 .tile--opened {
-  /* border-color: gray; */
   border: none;
+  background-color: rgba(40, 44, 52, 0.7);
+  box-shadow: inset 0px 0px 10px 2px rgba(40,44,52,0.7);
 }
 
 .map {
