--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -1,16 +1,37 @@
-.App {
-  text-align: center;
-}
+$background-color: #282c34;
 
-.App-header {
-  background-color: #282c34;
+.app {
+  text-align: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  background-color: $background-color;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+
+.app-header {
+  border: 1px solid white;
+}
+
+.scores-container {
+  border: 1px solid white;
+}
+
+.game-container {
+  border: 1px solid white;
+}
+
+.game-container {
+  border: 1px solid white;
+}
+
+.game--header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .tile {
