--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -1,37 +1,32 @@
 $background-color: #282c34;
+$primary-text-color: white;
+
+@import "./components/GameClock/GameClock.scss";
 
 .app {
   text-align: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: $primary-text-color;
   background-color: $background-color;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  
+  &--header {
+    border: 1px solid white;
+  }
 }
 
-.app-header {
+.game {
   border: 1px solid white;
-}
 
-.scores-container {
-  border: 1px solid white;
-}
-
-.game-container {
-  border: 1px solid white;
-}
-
-.game-container {
-  border: 1px solid white;
-}
-
-.game--header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  &--header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .tile {
@@ -47,25 +42,21 @@ $background-color: #282c34;
   border-bottom-color: black;
   border-right-color: black;
   font-size: medium;
-}
-
-.tile--unopened {
-  width: 100%;
-  height: 100%;
-}
-
-.tile--unopened:hover {
-  color: #61dafb;
-}
-
-.tile:hover {
-  cursor: pointer;
-}
-
-.tile--opened {
-  border: none;
-  background-color: rgba(40, 44, 52, 0.7);
-  box-shadow: inset 0px 0px 10px 2px rgba(40,44,52,0.7);
+  &:hover {
+    cursor: pointer;
+  }
+  &--opened {
+    border: none;
+    background-color: rgba(40, 44, 52, 0.7);
+    box-shadow: inset 0px 0px 10px 2px rgba(40,44,52,0.7);
+  }
+  &--unopened {
+    width: 100%;
+    height: 100%;
+    &:hover {
+      color: #61dafb;
+    }
+  }
 }
 
 .map {
@@ -79,12 +70,7 @@ $background-color: #282c34;
 
 .new-game-btn {
   color: white !important;
-}
-
-.new-game-btn:hover {
-  cursor: pointer;
-}
-
-.blank {
-  background-color: #61dafb;
+  &:hover {
+    cursor: pointer;
+  }
 }
