--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -12,16 +12,37 @@ $primary-text-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   
   &--header {
-    border: 1px solid white;
+    display: flex;
+    order: 1;
+    flex-grow: 1;
+    min-height: 200px;
+    align-items: center;
+    // border: 1px solid white;
+  }
+
+  &--body {
+    display: flex;
+    order: 2;
+    flex-grow: 2;
+    // border: 1px solid white;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  &--footer {
+    display: flex;
+    order: 3;
   }
 }
 
-.game {
-  border: 1px solid white;
+.scores {
+  // border: 1px solid white;
+}
 
+.game {
   &--header {
     display: flex;
     align-items: center;
