--- a/src/client/components/GameClock/GameClock.scss
+++ b/src/client/components/GameClock/GameClock.scss
@@ -1,3 +1,6 @@
 .game-clock {
-    // border: 1px solid $primary-text-color;
+    color: $orange;
+    font-size: 30px;
+    // font-family: $graduate;
+    font-family: $unica-one;
 }
