--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -1,21 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Roboto+Mono:wght@100;400;700&family=Unica+One&display=swap');
-
-$bungee-shade: 'Bungee Shade', cursive;
-$unica-one: 'Unica One', cursive;
-$roboto-mono: 'Roboto Mono', monospace; // thin 100, reg 400, bold 700
-
-
-$white: white;
-$gunmetal: #282c34ff;
-$light-blue: #7d8cc4ff;
-$red: #a41623ff;
-$orange: #f85e00ff;
-$yellow: #fde74cff;
-
-$background-color: $gunmetal;
-$primary-text-color: $white;
-
-@import "./components/GameClock/GameClock.scss";
+@import "./styles/variables.scss";
 
 .app {
   text-align: center;
@@ -68,7 +51,7 @@ $primary-text-color: $white;
 
 .tile {
   display: flex;
-  background-color: #282c34;
+  background-color: $tile-color;
   box-sizing: border-box;
   justify-content: center;
   align-items: center;
@@ -84,8 +67,8 @@ $primary-text-color: $white;
   }
   &--opened {
     border: none;
-    background-color: rgba(40, 44, 52, 0.7);
-    box-shadow: inset 0px 0px 10px 2px rgba(40,44,52,0.7);
+    background-color: $tile-opened-color;
+    box-shadow: inset 0px 0px 10px 2px $tile-opened-color;
   }
   &--unopened {
     width: 100%;
