--- a/src/client/components/GameClock/GameClock.scss
+++ b/src/client/components/GameClock/GameClock.scss
@@ -3,6 +3,6 @@
 .game-clock {
     color: $orange;
     font-size: 30px;
-    // font-family: $graduate;
     font-family: $unica-one;
+    text-align: right;
 }
