tile color change

--- a/src/client/styles/variables.scss
+++ b/src/client/styles/variables.scss
@@ -14,5 +14,6 @@ $yellow: #fde74cff;
 
 $background-color: $gunmetal;
 $primary-text-color: $white;
-$tile-color: $gunmetal;
+$tile-color: $light-blue;
 $tile-opened-color: rgba(40, 44, 52, 0.7);
+$tile-flag-color: $red;
