--- a/src/client/components/GameRules/GameRules.scss
+++ b/src/client/components/GameRules/GameRules.scss
@@ -1,8 +1,14 @@
 @import "../../styles/variables.scss";
 
 .game-rules {
-    width: 400px;
-    overflow: scroll;
+    // width: 400px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    box-sizing: content-box;
+    max-width: fit-content;
+    max-height: max-content;
     text-align: left;
 
     &--visible {
@@ -11,5 +17,15 @@
 
     &--toggle {
         text-align: center;
+        & span {
+            writing-mode: vertical-lr;
+            text-orientation: upright;
+        }
+    }
+
+    &--text {
+        flex-grow: 0;
+        padding: 10px;
+        overflow: scroll;
     }
 }
